CCD-2713: Fixed the query to cast negative values